[infra] Add missing argfile to the unpacked distribution